<resources>
    <string name="app_name">Test App </string>
    <string name="title_home">درانتظار جمع آوری</string>
    <string name="title_dashboard">تحت بررسی</string>
    <string name="camera_permitoin_setting">ورود به تنظیمات دسترسی دوربین</string>
    <string name="camera_permition">دسترسی دوربین</string>
    <string name="grant_permission">دسترسی</string>
    <string name="permission_camera">برنامه نیاز به استفاده از دوربین را دارد</string>
    <string name="permission_camera_rationale">دسترسی به دوربین برای اسکن</string>
    <string name="no_camera_permission">برنامه برای ادامه فعالیت به دسترسی دوربین نیاز دارد</string>
    <string name="grant">دسترسی</string>
    <string name="cancel">لغو</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="camera_txt">دوربین تلفن همراه خود را مقابل بارکد کالا قرار دهید</string>
    <string name="phone_not_correct">شماره تماس شما صحیح نیست</string>
    <string name="phone_must_be_11">شماره تماس باید ۱۱ رقم باشد</string>
    <string name="barcodeLessMessage">"تعداد بارکد های اسکن شده کمتر از تعداد کل می باشد \n مطمئن هستید؟"</string>
    <string name="getbarcode">دریافت</string>
    <string name="scannedBarcode">بارکد اسکن شده:</string>
    <string name="tedadKalayeMojood">تعداد کالا های موجود از این کالا</string>
    <string name="barcodeScannedDialogTag">BarcodeScannedDialog</string>
    <string name="BarcodeScannedConfirmLessDialogTag">BarcodeScannedConfirmLessDialog</string>
    <string name="isclose">isclose</string>
    <string name="dialogContent1">dialogContent1</string>
    <string name="dialogContent2">dialogContent2</string>
    <string name="type">type</string>
    <string name="title">title</string>
    <string name="barcodeScannedMoreMessage">تعداد وارد شده بیشتر از تعداد کل می باشد</string>
    <string name="barcodeScaneedMessageEmptyEditText">تعداد کالا های موجود از این کالا را وارد نمایید</string>
    <string name="titleButtonCancelDialog">لغو</string>
    <string name="titleButtonOkDialog">تایید</string>
    <string name="tedadkolDialog">تعداد کل:</string>
    <string name="digitsForEditText">abcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="enterUserName">نام کاربری خود را وارد نمایید</string>
    <string name="enterPassword">رمز عبور خود را وارد نمایید</string>
    <string name="loginButtontitel">ورود</string>
    <string name="barcodeNotFound">بارکد نامعتبر است</string>
    <string name="DuplicatedBarcode">بارکد قبلاً اسکن شده است</string>
    <string name="enterBarcodeMessage">بارکد مورد نظر را وارد نمایید</string>
    <string name="searchBarcodeMessage">جستجوی دستی بارکد کالا</string>
    <string name="listKamelBarcodha">نمایش لیست کامل</string>
    <string name="pendingBarcode">بارکدهای تحت بررسی</string>
    <string name="barcodeScan">اسکن بارکد</string>
    <string name="exitAccount">شما از حساب کاربری خود خارج می شوید!</string>
    <string name="startNewListBarcode">شما از فعالیت بر روی این سند خارج خواهید شد!</string>
    <string name="completeLevel">فرایند این کالا تکمیل شده است،امکان ویرایش وجود ندارد</string>
    <string name="scannedBarcodes">بارکد قبلاً اسکن شده و فرایندش تکمیل شده است</string>
    <string name="IntentAction">okala.pda.action</string>
    <string name="getIntentBarcode">BARCODE</string>
    <string name="title_logout">خروج</string>
    <string name="messageForBackPress">برای خروج از برنامه دوباره بازگشت را بزنید</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
