<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.okala.test.ui.fragment.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGround"
        tools:context=".ui.fragment.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:alpha="0.7"
            app:layout_constraintBottom_toTopOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/top_background" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_110sdp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline12"
            app:srcCompat="@drawable/companies_logo"
            tools:ignore="VectorDrawableCompat"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:alpha="0.3"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/main_background" />

        <com.okala.test.utils.customview.curve.CurveLayout
            android:id="@+id/curveLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="bottom"
            android:visibility="visible"
            app:arc_cropDirection="cropInside"
            app:arc_height="@dimen/_40sdp"
            app:arc_position="top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/back_gradian">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:alpha="0.2"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_buble"
                    tools:ignore="VectorDrawableCompat" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.okala.test.utils.customview.curve.CurveLayout>

        <EditText
            android:id="@+id/edUserName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:background="@drawable/back_edittext_login"
            android:drawableRight="@drawable/ic_man_user"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/iransansthin"
            android:textSize="@dimen/_14sdp"
            android:gravity="right|center"
            android:hint="@string/enterUserName"
            android:inputType="number"
            android:maxLength="11"
            android:layout_alignParentBottom="true"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <EditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/back_edittext_login"
            android:drawableRight="@drawable/ic_lock"
            android:drawablePadding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/iransansthin"
            android:gravity="right|center"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:layout_alignParentBottom="true"
            android:digits="@string/digitsForEditText"
            app:layout_constraintEnd_toEndOf="@+id/edUserName"
            app:layout_constraintStart_toStartOf="@+id/edUserName"
            app:layout_constraintTop_toBottomOf="@+id/edUserName" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toTopOf="@+id/btnLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:background="@drawable/back_button"
            android:text="@string/loginButtontitel"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/iransans"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/edPassword"
            app:layout_constraintStart_toStartOf="@+id/edPassword"
            app:layout_constraintTop_toBottomOf="@+id/edPassword"/>


        <TextView
            android:id="@+id/txtUserNameError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/iransansthin"
            android:textColor="@color/colorerror"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/edPassword"
            app:layout_constraintEnd_toEndOf="@+id/edUserName"
            app:layout_constraintTop_toBottomOf="@+id/edUserName" />

        <TextView
            android:id="@+id/txtPasswordError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/iransansthin"
            android:textColor="@color/colorerror"
            app:layout_constraintEnd_toEndOf="@+id/edPassword"
            app:layout_constraintTop_toBottomOf="@+id/edPassword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
